# embeddable-ollama-chatbot-api

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: bot_registry.py  cli.py  config.py  llm_provider.py  main.py  ollama_client.py  schemas.py  security.py
examples/: embed-playground.html  embed-playground.zh-TW.html  embed-snippet.html  embed.js  local-preview.html
scripts/: gpu_watchdog.py  migrate_env.py
tests/: test_api.py  test_config.py  test_gpu_watchdog.py  test_provider.py
wordpress/: widget-snippet.html
